--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -41,6 +41,28 @@ $font-01: 'Fira Sans', $sans-serif-fb;
 $font-02: 'Spectral', $serif-fb;
 $font-03: 'Selima', $sans-serif-fb;
 
+/* Icons
+========================================================================== */
+
+$icon-check: \f00c;
+$icon-check-circle: \f058;
+$icon-envelope: \f0e0;
+$icon-exclamation-triangle: \f071;
+$icon-facebook: \f09a;
+$icon-gplus: \f0d5;
+$icon-heart: \f004;
+$icon-inbox: \f01c;
+$icon-twitter: \f099;
+$icon-skype: \f17e;
+$icon-sort-asc: \f0de;
+$icon-sort-desc: \f0dd;
+$icon-spinner: \f110;
+$icon-windows: \f17a;
+$icon-world: \f0ac;
+$icon-x: \f00d;
+$icon-yahoo: \f19e;
+$icon-youtube: \f16a;
+
 /* Other
 ========================================================================== */
 
